--- a/frontend/src/components/Browse/Browse.css
+++ b/frontend/src/components/Browse/Browse.css
@@ -1,41 +1,68 @@
 * {
-  font-family: Tahoma;
+	font-family: Tahoma;
 }
 
 .browseWrapper {
-  background: url('https://www.thespruceeats.com/thmb/DJUXU58NcdqK-D2N0X0hkNiFaos=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-691572647-5b215adfff1b7800370c2038.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 50vh;
-  border-radius: 30px;
+	background: url('https://www.thespruceeats.com/thmb/DJUXU58NcdqK-D2N0X0hkNiFaos=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-691572647-5b215adfff1b7800370c2038.jpg')
+		no-repeat center center fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	height: 50vh;
+	border-radius: 30px;
+	border: 0px solid lightgrey;
 }
 
 .description {
-  background-color: rgb(82,103,25);
-  color: whitesmoke;
-  padding-top: 15vh;
-  padding-left: 50px;
-  padding-right: 20px;
-  padding-bottom: 40px;
-  width: 300px;
-  border-radius: 30px;
+	background-color: rgb(82, 103, 25);
+	color: whitesmoke;
+	padding-top: 15vh;
+	padding-left: 50px;
+	padding-right: 20px;
+	padding-bottom: 40px;
+	width: 300px;
 }
 
 .description > button {
-  background-color: rgb(125,98,1);
-  color: whitesmoke;
-  border: 2px solid lightgrey;
-  border-radius: 999px;
-  padding-top: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 5px;
-  outline-width: 0;
+	background-color: rgb(125, 98, 1);
+	color: whitesmoke;
+	border: 2px solid lightgrey;
+	border-radius: 999px;
+	padding-top: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	outline-width: 0;
 }
 
 .description > button:hover {
-  background-color: whitesmoke;
-  color: rgb(125,98,1);
+	background-color: whitesmoke;
+	color: rgb(125, 98, 1);
+}
+
+.searchBar {
+	display: flex;
+	flex-direction: column;
+}
+
+.searchButton {
+	background-color: whitesmoke;
+	color: rgb(82, 103, 25);
+	border: 2px solid lightgrey;
+	padding-top: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	outline-width: 0;
+}
+
+.searchButton:hover {
+	background-color: rgb(82, 103, 25);
+	color: whitesmoke;
+	border: 2px solid lightgrey;
+	padding-top: 5px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	outline-width: 0;
 }
