--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -15,6 +15,9 @@
   margin-left: 20px;
 }
 
+.header-logo:hover {
+  opacity: 0.8;
+}
 .searchBox {
   display: flex;
   flex: 1;
@@ -32,7 +35,6 @@
   outline-width: 0;
   width: 250px;
 }
-
 
 .menuBar {
   display: flex;
